// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exceptions SeeMeClientError should be customized Error class 1`] = `[SeeMeClientError: some error]`;

exports[`exceptions SeeMeClientExceptions should contain correct enum values 1`] = `
Object {
  "API_HOST_MISSING": "API_HOST_MISSING",
  "API_HOST_PROTOCOL_UNSUPPORTED": "API_HOST_PROTOCOL_UNSUPPORTED",
  "API_KEY_MISSING": "API_KEY_MISSING",
  "API_PATH_INVALID": "API_PATH_INVALID",
}
`;

exports[`exceptions SeeMeErrorResponse should be customized Error class 1`] = `[SeeMeErrorResponse: some error]`;

exports[`exceptions should export correct submodules 1`] = `
Object {
  "SeeMeClientError": [Function],
  "SeeMeClientExceptions": Object {
    "API_HOST_MISSING": "API_HOST_MISSING",
    "API_HOST_PROTOCOL_UNSUPPORTED": "API_HOST_PROTOCOL_UNSUPPORTED",
    "API_KEY_MISSING": "API_KEY_MISSING",
    "API_PATH_INVALID": "API_PATH_INVALID",
  },
  "SeeMeErrorResponse": [Function],
}
`;
